Hyperlinks to issues

--- a/_posts/2015-06-29-Build-150629.md
+++ b/_posts/2015-06-29-Build-150629.md
@@ -7,7 +7,7 @@ build: 150629
     if matching one was not found. These palettes ‘#Attached:XX’ are not
     saved automatically, but will be when user presses ‘Save settings’ button
     in the settings dialog.
-* gh#193: Show hookers warning once per day.
+* [conemu#193](https://github.com/Maximus5/ConEmu/issues/193): Show hookers warning once per day.
 * Show real names for ‘Win+Number’ and ‘Win+Arrows’ on the Controls page.
 * Search for static text control in the Settings dialog was failed.
 * Issue 1977: Don't change RealConsole height on tabs auto-show/hide,
