--- a/_posts/2015-07-01-Build-150701.md
+++ b/_posts/2015-07-01-Build-150701.md
@@ -4,11 +4,11 @@ build: 150701
 
 * Add optional '/Silent' switch to suppress environment exporting messages.
 		<pre>ConEmuC [/SILENT] /EXPORT[=CON|GUI|ALL] [Var1 [Var2 [...]]]</pre>
-* gh#193: Fix wrong condition: ‘Warn if MacType hookers are loaded’.
+* [conemu#193](https://github.com/Maximus5/ConEmu/issues/193): Fix wrong condition: ‘Warn if MacType hookers are loaded’.
 * Omit ConEmuC export variables message in GitShowBranch.cmd.
-* gh#174: Let paste to all ‘grouped input’ consoles at once.
+* [conemu#174](https://github.com/Maximus5/ConEmu/issues/174): Let paste to all ‘grouped input’ consoles at once.
 * Show actual hotkey instead of default Ctrl+BackSpace in Settings.
 * Vert/Horz text cursor was displayed in wrong position especially on DBCS systems.
 * Ctrl+BackSpace feature was not working on DBCS systems.
 * Redirect chocolatey downloads to github.
-* gh#204: ConEmu hung on startup in some cases while initializing default tasks.
+* [conemu#204](https://github.com/Maximus5/ConEmu/issues/204): ConEmu hung on startup in some cases while initializing default tasks.
