--- a/_posts/2015-07-05-Build-150705.md
+++ b/_posts/2015-07-05-Build-150705.md
@@ -6,4 +6,4 @@ build: 150705
 * Highlight & goto was broken at least for powershell scripts (c8c386a regression).
     Only file name (path) was highlighted without following line number.
 * Highlight & goto detector was failed if mouse was before first backslash of the path.
-* gh#205: TabBar was not shown on startup in some monitor configurations (bacc66d regression).
+* [conemu#205](https://github.com/Maximus5/ConEmu/issues/205): TabBar was not shown on startup in some monitor configurations (bacc66d regression).
