--- a/_posts/2015-07-16-Build-150716.md
+++ b/_posts/2015-07-16-Build-150716.md
@@ -12,7 +12,7 @@ build: 150716
 * Button ‘Add default tasks’ behavior was changed. Confirmation dialog suggests to
     either to add absent tasks or add and recreate all default tasks.
     Recreation will affect tasks' commands and parameters.
-* gh#213: Improve update error reporting, more logging.
+* [conemu#213](https://github.com/Maximus5/ConEmu/issues/213): Improve update error reporting, more logging.
 * Switch processor refactoring (code moved to CConEmuStart class).
 * Internal changes in threads creating/killing.
 * Some more logging for toolbar buttons and window resizing.
