--- a/_posts/2015-07-22-Build-150722.md
+++ b/_posts/2015-07-22-Build-150722.md
@@ -2,7 +2,7 @@
 build: 150722
 ---
 
-* gh#129: ‘Restore’ button didn't restore width if TaskBar was auto-hidden.
+* [conemu#129](https://github.com/Maximus5/ConEmu/issues/129): ‘Restore’ button didn't restore width if TaskBar was auto-hidden.
 * GuiMacro: Tab(11,"Name"): activates tab by name, title or process name
 * Describe some switches in the About dialog.
 * Some additional logging while resizing window.
