--- a/_posts/2015-08-13-Build-150813.md
+++ b/_posts/2015-08-13-Build-150813.md
@@ -22,7 +22,7 @@ build: 150813
   More info here: http://conemu.github.io/en/ZoneId.html
 * Let default task {cmd} be used for `Win+X` ConEmu hotkey.
   That is the configurable hotkey for ‘Create new ‘cmd.exe’ console’ action.
-* gh#224: Try to fix 'Maximum real console size was reached' error.
+* [conemu#224](https://github.com/Maximus5/ConEmu/issues/224): Try to fix 'Maximum real console size was reached' error.
 * DefTerm. Add ‘Apply’ button to settings page.
 * DefTerm. Add option to log all ‘exec’ activities of hooked processes (debug purposes).
 * Update PortableApps icons.
