--- a/_posts/2015-08-16-Build-150816.md
+++ b/_posts/2015-08-16-Build-150816.md
@@ -2,7 +2,7 @@
 build: 150816
 ---
 
-* gh#268: Support DefTerm for CodeBlocks. User have to add `codeblocks.exe|gdb.exe` to hooked executables.
-* gh#255, old#1065: Add option ‘Restore to active monitor’ to the ‘Size & Pos’ settings page.
+* [conemu#268](https://github.com/Maximus5/ConEmu/issues/268): Support DefTerm for CodeBlocks. User have to add `codeblocks.exe|gdb.exe` to hooked executables.
+* [conemu#255](https://github.com/Maximus5/ConEmu/issues/255), old#1065: Add option ‘Restore to active monitor’ to the ‘Size & Pos’ settings page.
   It moves window to active monitor from inactive by Min/Restore hotkey even if window is visible.
   Option is implied by `-quake` ConEmu.exe switch.
