--- a/_posts/2015-08-21-Build-150821.md
+++ b/_posts/2015-08-21-Build-150821.md
@@ -9,7 +9,7 @@ build: 150821
   [Launch task in specific directory](http://conemu.github.io/en/LaunchNewTab.html)
 * Task parameter `/dir` was ignored if task was started by `Win+X` hotkey (‘Default shell’ checkbox).
 * GuiMacro: Use `ConEmuC -Silent -GuiMacro ..` to suppress GuiMacro result printing.
-* gh#287: Fix crashes while starting threads.
+* [conemu#287](https://github.com/Maximus5/ConEmu/issues/287): Fix crashes while starting threads.
 * Some internal changes in ConEmuHk.
 * Set gcc debug make destination to 'Debug' dir.
 
