--- a/_posts/2015-08-23-Build-150813a.md
+++ b/_posts/2015-08-23-Build-150813a.md
@@ -4,9 +4,9 @@ build: 150813a
 
 * This preview build includes patches from alpha branch, because alpha has some problems with NVIDIA CoProcManager.
 * Article in wikipedia [was proposed for deletion](https://github.com/Maximus5/ConEmu/issues/289).
-* gh#287: Fix crashes while starting threads.
+* [conemu#287](https://github.com/Maximus5/ConEmu/issues/287): Fix crashes while starting threads.
 * Task parameter `/dir` was ignored if task was started by `Win+X` hotkey (‘Default shell’ checkbox).
 * GuiMacro: Use `ConEmuC -Silent -GuiMacro ..` to suppress GuiMacro result printing.
 * Support `/dir %CD%` in Task parameters.
-* gh#268: Support DefTerm for CodeBlocks. User have to add `codeblocks.exe|gdb.exe` to hooked executables.
+* [conemu#268](https://github.com/Maximus5/ConEmu/issues/268): Support DefTerm for CodeBlocks. User have to add `codeblocks.exe|gdb.exe` to hooked executables.
 * In some circumstances ConEmu ‘drawing’ almost hangs during mouse text selection.
