--- a/_posts/2015-08-24-Build-150813b.md
+++ b/_posts/2015-08-24-Build-150813b.md
@@ -2,4 +2,4 @@
 build: 150813b
 ---
 
-* gh#279: ConEmu window grew in size after relaunch if size was defined in pixels or percents.
+* [conemu#279](https://github.com/Maximus5/ConEmu/issues/279): ConEmu window grew in size after relaunch if size was defined in pixels or percents.
