--- a/_posts/2015-09-01-Build-150813c.md
+++ b/_posts/2015-09-01-Build-150813c.md
@@ -3,10 +3,10 @@ build: 150813c
 stage: preview
 ---
 
-* gh#279: Unchecked ‘Align ConEmu window size to cells’ was ignored on startup.
+* [conemu#279](https://github.com/Maximus5/ConEmu/issues/279): Unchecked ‘Align ConEmu window size to cells’ was ignored on startup.
 * Win2k: Restore compatibility with Windows 2000.
 * Win2k: Adapt ‘Pause’ feature to lack of GetConsoleSelectionInfo.
-* gh#216: Mouse wheel only works on first console in split window.
+* [conemu#216](https://github.com/Maximus5/ConEmu/issues/216): Mouse wheel only works on first console in split window.
 * Fix unexpected resize to integral size on startup.
 * Don't create two default tasks {Bash::Git bash} for `git-cmd.exe` and `bin/sh.exe`.
 * Don't count `git-cmd.exe` and `git-bash.exe` while checking for ‘Incomplete operations’ during tab/window close.
