--- a/_posts/2015-09-10-Build-150910.md
+++ b/_posts/2015-09-10-Build-150910.md
@@ -2,8 +2,8 @@
 build: 150910
 ---
 
-* gh#272: Fix crash on exit when NVIDIA CoProcManager dlls are loaded (workaround). Thanks to @kraml for testing.
-* gh#290: Far Manager Background plugins were broken (minhook regression).
+* [conemu#272](https://github.com/Maximus5/ConEmu/issues/272): Fix crash on exit when NVIDIA CoProcManager dlls are loaded (workaround). Thanks to @kraml for testing.
+* [conemu#290](https://github.com/Maximus5/ConEmu/issues/290): Far Manager Background plugins were broken (minhook regression).
 * Feature ‘Change prompt position with LClick’ was not working with clink.
 * Don't try to position cursor on higher line to avoid numerous beeps (bash, clink, etc.)
 * Don't hook Kernelbase.dll in Windows 7 (MultiRunX64 was printed unprocessed ANSI).
