--- a/_posts/2015-09-13-Build-150913.md
+++ b/_posts/2015-09-13-Build-150913.md
@@ -3,6 +3,6 @@ build: 150913
 ---
 
 * ConEmuLn. Add separate settings for Editor and Viewer underline colors.
-* gh#321: Temp fix for Vim display issues.
-* gh#297: Show option ‘Delay between consoles initialization’ on the ‘Startup’ page.
+* [conemu#321](https://github.com/Maximus5/ConEmu/issues/321): Temp fix for Vim display issues.
+* [conemu#297](https://github.com/Maximus5/ConEmu/issues/297): Show option ‘Delay between consoles initialization’ on the ‘Startup’ page.
 * Internal bugfixes from Michael Lukashov.
