--- a/_posts/2015-10-06-Build-151006.md
+++ b/_posts/2015-10-06-Build-151006.md
@@ -2,13 +2,13 @@
 build: 151006
 ---
 
-* Disable old workaround for gh#272 (revert eaaf96b).
-  There were reports of broken redirections: gh#341, gh#323.
+* Disable old workaround for [conemu#272](https://github.com/Maximus5/ConEmu/issues/272) (revert eaaf96b).
+  There were reports of broken redirections: [conemu#341](https://github.com/Maximus5/ConEmu/issues/341), gh#323.
 * Add `<Cobalt2>` default color scheme.
-* gh#345: ‘Run as Administrator’ was crashed in some cases.
-* gh#350: Fix slowdowns when running commands in ConEmu.
-* gh#322: Fix crash in hooked applications while updating DefTerm module.
-* gh#344: Fix abnormal resize of maximized window if TabBar is auto-shown.
+* [conemu#345](https://github.com/Maximus5/ConEmu/issues/345): ‘Run as Administrator’ was crashed in some cases.
+* [conemu#350](https://github.com/Maximus5/ConEmu/issues/350): Fix slowdowns when running commands in ConEmu.
+* [conemu#322](https://github.com/Maximus5/ConEmu/issues/322): Fix crash in hooked applications while updating DefTerm module.
+* [conemu#344](https://github.com/Maximus5/ConEmu/issues/344): Fix abnormal resize of maximized window if TabBar is auto-shown.
 * DefTerm. Improve error message, version, process name.
 * Temp fix for GetEnvironmentVariable stack overflow.
 * Print handles information in `ConEmuC /checkunicode`.
