--- a/_posts/2015-10-15-Build-151015.md
+++ b/_posts/2015-10-15-Build-151015.md
@@ -2,7 +2,7 @@
 build: 151015
 ---
 
-* gh#21: Multi-monitor support improvements.
+* [conemu#21](https://github.com/Maximus5/ConEmu/issues/21): Multi-monitor support improvements.
   * ConEmu takes into account monitor working coordinates when
     using same xml between different PCs.
   * ConEmu tries to guess the monitor where user want to open the window.
@@ -11,13 +11,13 @@ build: 151015
     or HMONITOR (hex descriptor), or monitor name.
     User may check these values in the ‘ConEmu About dialog’
     on then ‘SysInfo’ tab (Win+Alt+A).
-* gh#368: Fix thread handles leaks.
-* gh#353: Jump lists were created improperly if ConEmu was started with `-single` switch.
-* gh#337: Convert pasted paths to cygwin's style if dropping files/folders from Explorer and others.
+* [conemu#368](https://github.com/Maximus5/ConEmu/issues/368): Fix thread handles leaks.
+* [conemu#353](https://github.com/Maximus5/ConEmu/issues/353): Jump lists were created improperly if ConEmu was started with `-single` switch.
+* [conemu#337](https://github.com/Maximus5/ConEmu/issues/337): Convert pasted paths to cygwin's style if dropping files/folders from Explorer and others.
 * On paste filepath by Ctrl+V (Paste first line of clipboard) convert path
   to cygwin style, if active application is cygwin/msys.
 * Add `<ConEmu>` color scheme and use it by default (for new configs).
-* gh#357: Fix ConEmuHk conflict with python's TKinter dropdown control.
+* [conemu#357](https://github.com/Maximus5/ConEmu/issues/357): Fix ConEmuHk conflict with python's TKinter dropdown control.
 * ANSI: Brightness (back/fore) was not reset in some cases.
   For example: `\e[96mA\e[36mB` - `B` and `A` had same color.
 * Implement copying colored text using ANSI sequences.
