--- a/_posts/2015-10-25-Build-151025.md
+++ b/_posts/2015-10-25-Build-151025.md
@@ -2,13 +2,13 @@
 build: 151025
 ---
 
-* gh#373: Don't decrease window height with AutoTabs (show/hide/show/hide/...)
-* gh#388 (gh#295?): Don't change buffer height for cygwin/msys versions of vim.
-* gh#359, gh#84: Fix vim color issues on scrolling.
+* [conemu#373](https://github.com/Maximus5/ConEmu/issues/373): Don't decrease window height with AutoTabs (show/hide/show/hide/...)
+* [conemu#388](https://github.com/Maximus5/ConEmu/issues/388) ([conemu#295](https://github.com/Maximus5/ConEmu/issues/295)?): Don't change buffer height for cygwin/msys versions of vim.
+* [conemu#359](https://github.com/Maximus5/ConEmu/issues/359), [conemu#84](https://github.com/Maximus5/ConEmu/issues/84): Fix vim color issues on scrolling.
 * Don't change buffer height when starting `vim` with `--help` or `--version`.
 * Vim terminal mode was not finished properly on exit.
 * ANSI `\e[K` has not cleared rightmost cell.
 * Checkbox ‘Desktop mode’ was removed from settings.
-* gh#336: Don't poll Far 2.x current directories while Editor/Viewer is active.
-* gh#17: Send WM_ENTERSIZEMOVE/WM_EXITSIZEMOVE to ChildGui during resize.
+* [conemu#336](https://github.com/Maximus5/ConEmu/issues/336): Don't poll Far 2.x current directories while Editor/Viewer is active.
+* [conemu#17](https://github.com/Maximus5/ConEmu/issues/17): Send WM_ENTERSIZEMOVE/WM_EXITSIZEMOVE to ChildGui during resize.
 
