--- a/_posts/2015-10-29-Build-151029.md
+++ b/_posts/2015-10-29-Build-151029.md
@@ -9,7 +9,7 @@ build: 151029
   loaded, they both will fail to work properly. So, warn user about the
   problem in detail, show suggestion, and stop plugin initialization.
 * Warn user if wrong version of ConEmu plugin was loaded in Far Manager.
-* gh#364: Ignore Minimize/Restore hotkeys pressed while Quake animation is not finished.
+* [conemu#364](https://github.com/Maximus5/ConEmu/issues/364): Ignore Minimize/Restore hotkeys pressed while Quake animation is not finished.
 * Don't try to inject hooks into ConEmuC processes.
 * Menu item ‘Active process memory dump’ did not suggested to create dump automatically.
 * Add note about maximum length of backscroll buffer (32766 lines).
