--- a/_posts/2015-11-01-Build-151101.md
+++ b/_posts/2015-11-01-Build-151101.md
@@ -2,8 +2,8 @@
 build: 151101
 ---
 
-* gh#401: Fix: `Ctrl+~` doesn't work on build 151029.
-* gh#399: Use mouse for ConEmu's selection instead of passing to cygwin's vim.
-* gh#398: Fix: Taskbar previews don't match tabs order.
+* [conemu#401](https://github.com/Maximus5/ConEmu/issues/401): Fix: `Ctrl+~` doesn't work on build 151029.
+* [conemu#399](https://github.com/Maximus5/ConEmu/issues/399): Use mouse for ConEmu's selection instead of passing to cygwin's vim.
+* [conemu#398](https://github.com/Maximus5/ConEmu/issues/398): Fix: Taskbar previews don't match tabs order.
 * Fix: Win7 taskbar aero peeks appeared in wrong position if pad size was not null.
 
