--- a/_posts/2015-11-15-Build-151115.md
+++ b/_posts/2015-11-15-Build-151115.md
@@ -2,15 +2,15 @@
 build: 151115
 ---
 
-* gh#415: GetLastError returned `6` after WriteFile even on success.
+* [conemu#415](https://github.com/Maximus5/ConEmu/issues/415): GetLastError returned `6` after WriteFile even on success.
 * `Shift`+`Debug active process` allows to run debugger in a split.
   If menu item `Debug active process` is called with `Shift` key pressed,
   NewConsole dialog is opened (allowing to run debugger in a split).
 * ConEmuC Debugger. Don't suggest to create MiniDump on MS_VC_THREADNAME_EXCEPTION.
 * In some cases ConEmuC64 was started as server for 32-bit root process.
-* gh#94: Gray window on PuTTY when connected via local proxy command.
-* Correct condition for attaching console app started from ChildGui (from gh#94).
-* gh#419: Cygwin-friendly paths were pasted into Clink's prompt.
+* [conemu#94](https://github.com/Maximus5/ConEmu/issues/94): Gray window on PuTTY when connected via local proxy command.
+* Correct condition for attaching console app started from ChildGui (from [conemu#94](https://github.com/Maximus5/ConEmu/issues/94)).
+* [conemu#419](https://github.com/Maximus5/ConEmu/issues/419): Cygwin-friendly paths were pasted into Clink's prompt.
 * Option ‘Suppress bells’ added to ‘Features’ settings page.
   It suppresses annoying bells produced by echoing char(7), Beep
   and MessageBeep functions. ‘Inject ConEmuHk’ is required.
