--- a/_posts/2015-11-19-Build-151119.md
+++ b/_posts/2015-11-19-Build-151119.md
@@ -2,7 +2,7 @@
 build: 151119
 ---
 
-* gh#412: Failed to restore window position on secondary monitor (d3da351 regression).
+* [conemu#412](https://github.com/Maximus5/ConEmu/issues/412): Failed to restore window position on secondary monitor (d3da351 regression).
 * Far Manager plugins ‘ConEmu Background’ and ‘ConEmu Underlines’ were not working on Windows 7.
 * First user palette was multiplied on sequental TabMenu calls ‘View (palettes)’.
 * On ‘Debug active process...’ always show ‘New console’ dialog.
