--- a/_posts/2015-11-26-Build-151126.md
+++ b/_posts/2015-11-26-Build-151126.md
@@ -7,7 +7,7 @@ build: 151126
   If `/icon` switch was not specified for Task parameters,
   and first line of Task commands started with specials `*` or `>`,
   JumpList icon was not created properly.
-* gh#431: Fix crash in EmergencyShow (Win10, closing ConEmu).
+* [conemu#431](https://github.com/Maximus5/ConEmu/issues/431): Fix crash in EmergencyShow (Win10, closing ConEmu).
 * Show in the StatusBar cygwin/msys connector's PID as AltServer.
 * Pass UTF-8 encoded strings to debugger (ANSI debug logging).
 * ANSI: Implement `ESC [ 3 J`: dispose all backscroll lines (from xterm).
