--- a/_posts/2015-12-08-Build-151208.md
+++ b/_posts/2015-12-08-Build-151208.md
@@ -2,7 +2,7 @@
 build: 151208
 ---
 
-* gh#459: Characters disappear after readline `Ctrl+R`, ..., `Enter`.
+* [conemu#459](https://github.com/Maximus5/ConEmu/issues/459): Characters disappear after readline `Ctrl+R`, ..., `Enter`.
 * ConEmu Inside: Fix detection of ‘ConEmu has focus’.
 * ConEmu Inside: Don't resize VCon or RCon if parent is minimized.
 * ConEmu Inside: Show TaskBar progress on parent window.
