--- a/_posts/2015-12-10-Build-151210.md
+++ b/_posts/2015-12-10-Build-151210.md
@@ -8,4 +8,4 @@ build: 151210
 * Show internal AppID in the About dialog, log AppID source.
   This ID is used for Win7+ TaskBar (pinned apps).
 * In some cases Win7+ pinned TaskBar icon was not reused.
-* gh#461: Fix AeroPeek VCon offset when using captionless mode.
+* [conemu#461](https://github.com/Maximus5/ConEmu/issues/461): Fix AeroPeek VCon offset when using captionless mode.
