--- a/_posts/2015-12-13-Build-150813e.md
+++ b/_posts/2015-12-13-Build-150813e.md
@@ -3,7 +3,7 @@ build: 150813e
 stage: preview
 ---
 
-* gh#461: Fix AeroPeek VCon offset when frame is non-resizable.
-* gh#210: Minimizing other windows causes ConEmu to be restored (Quake).
+* [conemu#461](https://github.com/Maximus5/ConEmu/issues/461): Fix AeroPeek VCon offset when frame is non-resizable.
+* [conemu#210](https://github.com/Maximus5/ConEmu/issues/210): Minimizing other windows causes ConEmu to be restored (Quake).
 * Don't try to pop up console menu by Shift+RClick while LBtn selection is present.
 * Bug and warning fixes (from Michael Lukashov).
