--- a/_posts/2015-12-17-Build-151217.md
+++ b/_posts/2015-12-17-Build-151217.md
@@ -8,8 +8,8 @@ build: 151217
     Example for cmd prompt: `call cecho "Redirected output" > CON`.
   * Output of msvcrt linked applications, like `PING` or `TRACERT`,
     may be logged (Settings\Features\Log console output).
-* gh#461: Fix AeroPeek VCon offset when frame is non-resizable.
-* gh#210: Minimizing other windows causes ConEmu to be restored (Quake).
+* [conemu#461](https://github.com/Maximus5/ConEmu/issues/461): Fix AeroPeek VCon offset when frame is non-resizable.
+* [conemu#210](https://github.com/Maximus5/ConEmu/issues/210): Minimizing other windows causes ConEmu to be restored (Quake).
 * First try to draw non-spacings/combinings/surrogates/double-width in ‘proper’ size.
   For example, combining accents/umlauts must be shown over preceding letter,
   CJK double-width characters must use two cells to avoid overlapping.
@@ -24,7 +24,7 @@ build: 151217
   * Otherwise: do ‘Close tab’.
 * ConEmu Inside: Terminate our process (ConEmu.exe) if parent window was killed.
 * Don't try to hide to TSA in Inside mode.
-* gh#467: Startup crash if startup task was renamed.
+* [conemu#467](https://github.com/Maximus5/ConEmu/issues/467): Startup crash if startup task was renamed.
 * Arbitrary shells (not a Task) were not accepted in FastConfiguration dialog.
 * Let's save integers as user-friendly 10-based numbers (new xml configs).
 * Allow AutoUpdates to ‘Stable’ builds.
@@ -48,5 +48,5 @@ build: 151217
 * GuiMacro: If `ConEmuC -GuiMacro` was started before ConEmu GUI finishes initialization,
   wait for ConEmu window appears or ConEmu.exe process terminates.
 * Option ‘Skip click on activation’ was not working on ‘touch’.
-* gh#310: Chars entered by Alt+Numpad were not working.
+* [conemu#310](https://github.com/Maximus5/ConEmu/issues/310): Chars entered by Alt+Numpad were not working.
 * Warning fixes (from Michael Lukashov).
