--- a/_posts/2015-12-22-Build-151222.md
+++ b/_posts/2015-12-22-Build-151222.md
@@ -2,13 +2,13 @@
 build: 151222
 ---
 
-* gh#465: Treat Ctrl-Z as ‘EndOfStream’ in ReadConsole (Go input streams).
+* [conemu#465](https://github.com/Maximus5/ConEmu/issues/465): Treat Ctrl-Z as ‘EndOfStream’ in ReadConsole (Go input streams).
   To use, on new line press Ctrl-Z and Enter. Option (Features page) disabled by default.
-* gh#469: TabBar/ToolBar is too large.
-* gh#473: Support Ctrl+LClick on paths surrounded by brackets.
-* connector/gh#4: AltGr+Char was not working with cygwin/msys connector.
-* gh#470: Double click word selection was broken.
-* conemu-inside/gh#3: New switch `-new_console:c0`.
+* [conemu#469](https://github.com/Maximus5/ConEmu/issues/469): TabBar/ToolBar is too large.
+* [conemu#473](https://github.com/Maximus5/ConEmu/issues/473): Support Ctrl+LClick on paths surrounded by brackets.
+* [connector#4](https://github.com/Maximus5/cygwin-connector/issues/4): AltGr+Char was not working with cygwin/msys connector.
+* [conemu#470](https://github.com/Maximus5/ConEmu/issues/470): Double click word selection was broken.
+* [conemu-inside#3](https://github.com/Maximus5/conemu-inside/issues/3): New switch `-new_console:c0`.
   It suppress writing to console confirmation messages
   like "Press Enter or Esc to close console...", but let server
   to wait for `Enter` or `Esc` nonetheless.
