--- a/_posts/2015-12-24-Build-151224.md
+++ b/_posts/2015-12-24-Build-151224.md
@@ -4,8 +4,8 @@ build: 151224
 
 * All 64-bit binaries are built with VS14.
   32-bit binaries are still built with VS9 (WinSDK7) to be compatible with old systems.
-* gh#486: Use https for github links.
-* gh#488: Full paths were shown in Far's editor/viewer tabs (6ce49af regression).
+* [conemu#486](https://github.com/Maximus5/ConEmu/issues/486): Use https for github links.
+* [conemu#488](https://github.com/Maximus5/ConEmu/issues/488): Full paths were shown in Far's editor/viewer tabs (6ce49af regression).
 * GuiMacro: Return xml instead of json for `GetInfo Root`.
 * GuiMacro: In-process GuiMacro execution improvements.
 
