--- a/_posts/2016-01-11-Build-160111.md
+++ b/_posts/2016-01-11-Build-160111.md
@@ -3,11 +3,11 @@ build: 160111
 ---
 
 * Fix bad XML format for GuiMacro GetInfo Root.
-* gh#491: Example Far Macro `ConEmu.CtrlShiftT.lua` had wrong hotkey.
+* [conemu#491](https://github.com/Maximus5/ConEmu/issues/491): Example Far Macro `ConEmu.CtrlShiftT.lua` had wrong hotkey.
 * Add ‘Anti-aliasing’ option for alternative font.
 * Far Manager was not resized after splitting with Ctrl-Shift-O/E.
   Implement helper ForceFarResize and utilize it in both sync and async modes.
-* gh#502, gh#446, gh#447: The algorithm of text drawing has changed significantly.
+* [conemu#502](https://github.com/Maximus5/ConEmu/issues/502), [conemu#446](https://github.com/Maximus5/ConEmu/issues/446), [conemu#447](https://github.com/Maximus5/ConEmu/issues/447): The algorithm of text drawing has changed significantly.
 * Prevent double execution of script specified in "AutoRun" cmd's registry key.
   For example, when "cmd /k CmdInit.cmd" was started (default for {cmd} task)
   triggering `ver` command caused execution of `test.cmd` again.
@@ -17,10 +17,10 @@ build: 160111
 "AutoRun"="test.cmd"
 ~~~
 
-* gh#494: Fix clink double initialization.
-* connector#3: Let Left/Right/Up/Down/Home/End post sequences `ESC[X`.
-* connector#8: Fix `top` output lines.
+* [conemu#494](https://github.com/Maximus5/ConEmu/issues/494): Fix clink double initialization.
+* [connector#3](https://github.com/Maximus5/cygwin-connector/issues/3): Let Left/Right/Up/Down/Home/End post sequences `ESC[X`.
+* [connector#8](https://github.com/Maximus5/cygwin-connector/issues/8): Fix `top` output lines.
 * Update `terminals` module to v0.7.3.
 * Updating progress was not changed during downloading (10% till 99%).
-* gh#297: Fix keyboard delay (Windows 7).
-* gh#471: Far plugin ‘ConEmu Panel Views’ was broken (da926ba regression).
+* [conemu#297](https://github.com/Maximus5/ConEmu/issues/297): Fix keyboard delay (Windows 7).
+* [conemu#471](https://github.com/Maximus5/ConEmu/issues/471): Far plugin ‘ConEmu Panel Views’ was broken (da926ba regression).
