--- a/_posts/2016-02-04-Build-160204.md
+++ b/_posts/2016-02-04-Build-160204.md
@@ -11,4 +11,4 @@ build: 160204
 * Screen was not updated if shell (cmd for example) was activated back
   from closed Far Manager, if close has been done by cross-click
   and ‘Safe Far Close’ macro.
-* gh-524: Deal with entangled window list returned by Far API.
+* [conemu#524](https://github.com/Maximus5/ConEmu/issues/524): Deal with entangled window list returned by Far API.
