--- a/_posts/2016-02-17-Build-160217.md
+++ b/_posts/2016-02-17-Build-160217.md
@@ -2,7 +2,7 @@
 build: 160217
 ---
 
-* gh-541: Chinese translation (from @ulin).
+* [conemu#541](https://github.com/Maximus5/ConEmu/issues/541): Chinese translation (from @ulin).
 * Maximus5/conemu-inside#4: Don't warn `ConEmu's parent window was terminated abnormally` if we have no VCon.
 * Maximus5/conemu-inside#4: Don't show ‘Can't create new virtual console’ error if parent was killed during initialization.
 * Maximus5/conemu-inside#12: Query GuiMacro result via callback function.
@@ -91,7 +91,7 @@ Line1^nLine2
 * Show (StatusBar) and log PID of started console server.
 * GuiMacro: `WindowMode("HERE")` moves ConEmu to monitor with mouse cursor.
 * Add hotkey for ‘Move ConEmu window to the monitor with mouse cursor (Bring here)’.
-* gh-240: Create a workaround for ‘Maximum real console size was reached’.
+* [conemu#240](https://github.com/Maximus5/ConEmu/issues/240): Create a workaround for ‘Maximum real console size was reached’.
 
   Looks like MS-Bug in conhost leads to abnormally large font set in real console,
   if tab was started As Admin in Windows 10 and Win-L pressed.
