--- a/_posts/2016-02-18-Build-160218.md
+++ b/_posts/2016-02-18-Build-160218.md
@@ -18,7 +18,7 @@ build: 160218
 
   Ref: Maximus5/conemu-inside#3
 
-* gh-550, gh-372, gh-234: Unassigned by default hotkey ‘Reset terminal’ (dangerous).
+* [conemu#550](https://github.com/Maximus5/ConEmu/issues/550), [conemu#372](https://github.com/Maximus5/ConEmu/issues/372), [conemu#234](https://github.com/Maximus5/ConEmu/issues/234): Unassigned by default hotkey ‘Reset terminal’ (dangerous).
 
   I'm still sure that this operation is harmful and dangerous:
   <https://conemu.github.io/en/ClearScreen.html>.
