--- a/_posts/2016-02-22-Build-160222.md
+++ b/_posts/2016-02-22-Build-160222.md
@@ -2,7 +2,7 @@
 build: 160222
 ---
 
-* gh-555: Aliases support was broken (771ab79 regression).
+* [conemu#555](https://github.com/Maximus5/ConEmu/issues/555): Aliases support was broken (771ab79 regression).
 * Maximus5/conemu-inside#13: ConEmu-Inside position was not updated in some cases.
 * Understandable error message if bad `-loadcfgfile` was specified.
 * Don't erase default MSZ setting value, if one not found in xml.
