--- a/_posts/2016-02-28-Build-160228.md
+++ b/_posts/2016-02-28-Build-160228.md
@@ -6,7 +6,7 @@ stage: preview
 * Fix crash when mouse wheel was scrolled over search edit box.
 * Warning fixes (from Michael Lukashov).
 * Intelligent selection mode was not working in Far userscreen (Panels turned off).
-* gh-560: Fix true-color scrolling issues in Far 3.0.4525.
+* [conemu#560](https://github.com/Maximus5/ConEmu/issues/560): Fix true-color scrolling issues in Far 3.0.4525.
 * Alt+Numbers mode improvements.
   * Hotkey (unassigned): Start Alt+Number mode to enter unicode symbol by its hex codebase.
   * Allow mode start by GuiMacro: `AltNumber([Base])`.
