--- a/_posts/2016-03-01-Build-160301.md
+++ b/_posts/2016-03-01-Build-160301.md
@@ -2,12 +2,12 @@
 build: 160301
 ---
 
-* gh-562: Environment was not applied to elevated consoles.
+* [conemu#562](https://github.com/Maximus5/ConEmu/issues/562): Environment was not applied to elevated consoles.
 * Window icon was changed by mistake when starting task with defined icon.
   This must happen only for startup task.
 * StatusBar was not updated after root process termination.
   Especially for consoles started with `-new_console:c0` or `-new_console:c1`.
-* gh-561: Tab macro `%d` was not trimmed to ‘Max tab width’.
+* [conemu#561](https://github.com/Maximus5/ConEmu/issues/561): Tab macro `%d` was not trimmed to ‘Max tab width’.
 * For TaskBar with small icons show current console icon instead of ConEmu default (option ‘Admin shield’).
 * GuiMacro: `GetInfo("Root")` XML-result changes.
 
