--- a/_posts/2016-03-08-Build-160308.md
+++ b/_posts/2016-03-08-Build-160308.md
@@ -4,7 +4,7 @@ build: 160308
 
 * Option ‘Retard inactive panes’ was ignored in some cases.
 * Trailing dot was not trimmed after md-style hyperlink.
-* gh-420: Do not enable by default option ‘Process start’.
+* [conemu#420](https://github.com/Maximus5/ConEmu/issues/420): Do not enable by default option ‘Process start’.
 * Debugging purposes: `ConEmuC.exe -struct %ConEmuPID%`.
 * In prompt, Shift+Home/End selects command text first, second press expands selection to line start/end.
 * If selection was started from keyboard, than Del/Shift-Del/Backspace removes selected text.
