--- a/_posts/2016-03-10-Build-160310.md
+++ b/_posts/2016-03-10-Build-160310.md
@@ -13,7 +13,7 @@ build: 160310
   * Do `Internal Copy & Paste` if LBtn is still down and RBtn is clicked.
   * Avoid blinking on double/triple clicks.
   * Selection: In some cases Shift+DblClick slipped to console.
-* gh-328: Improve double-click word selection logic.
+* [conemu#328](https://github.com/Maximus5/ConEmu/issues/328): Improve double-click word selection logic.
   * Don't select space after word.
   * Don't select pseudographics before/after alphabeticals.
   * Trim trailing punctuations.
