--- a/_posts/2016-03-13-Build-160313.md
+++ b/_posts/2016-03-13-Build-160313.md
@@ -6,5 +6,5 @@ build: 160313
 * Intelligent selection: RClick over selected region will Paste selected text,
   bypassing Windows' clipboard, and Reset selection region.
 * Fix garbage displayed in VCon during console startup on WinXP.
-* gh-571: `ConEmu -demote ...` starts process for the wrong user.
+* [conemu#571](https://github.com/Maximus5/ConEmu/issues/571): `ConEmu -demote ...` starts process for the wrong user.
 * Log current SessionID, improve Desktop and Title representation.
