--- a/_posts/2016-03-24-Build-160324.md
+++ b/_posts/2016-03-24-Build-160324.md
@@ -7,7 +7,7 @@ build: 160324
 * Update {Show ANSI colors} and fit in 76 chars.
 * Show compiler version and colorize output of `-Args`.
 * Try to show and re-apply `-new_console:XXX` switches in ‘Recreate’ dialog.
-* gh-581: Restart ConEmu after automatic update in the same directory it was started before.
+* [conemu#581](https://github.com/Maximus5/ConEmu/issues/581): Restart ConEmu after automatic update in the same directory it was started before.
 * Update chinese translation.
 * Update Russian translation.
 * If ConEmu started with `-detached` switch, don't close it automatically when last tab is terminated.
@@ -21,11 +21,11 @@ build: 160324
 * Avoid ‘Unknown state’ appeared in the StatusBar during console startup.
 * LogFiles may be enabled permanently via Settings -> Features -> ‘Internal LogFiles location’.
 * CmdInit.cmd: Reset colors on each prompt (`$E[m`).
-* gh-587: Fix text selection when cursor passes the selection anchor (changing selection direction).
-* gh-598: Improve pasting options for `Shift+Ins` and `Ctrl+V` (multi-line text).
+* [conemu#587](https://github.com/Maximus5/ConEmu/issues/587): Fix text selection when cursor passes the selection anchor (changing selection direction).
+* [conemu#598](https://github.com/Maximus5/ConEmu/issues/598): Improve pasting options for `Shift+Ins` and `Ctrl+V` (multi-line text).
   Now, `Ctrl+V` will insert all lines, space-separated, and `Shift+Ins` insert
   multi-line text as before. User may change actions on the ‘Paste’ settings page.
-* gh-101: Switch `-UseExport` may be specified before `-GuiMacro` to export result as env.var.
+* [conemu#101](https://github.com/Maximus5/ConEmu/issues/101): Switch `-UseExport` may be specified before `-GuiMacro` to export result as env.var.
   Without `-UseExport` specified before `-GuiMacro`, ConEmuC.exe will not try
   to export GuiMacro result as environment variable `ConEmuMacroResult`
   to the parent process.
