--- a/_posts/2016-03-27-Build-160327.md
+++ b/_posts/2016-03-27-Build-160327.md
@@ -2,14 +2,14 @@
 build: 160327
 ---
 
-* Add palette change logging. Ref: gh-599, searching for bottle neck
-* gh-593: Background color index was cropped to 8-color palette after `\e[9999;1H`.
-* gh-587: Fix text selection when cursor passes the selection anchor (downright).
+* Add palette change logging. Ref: [conemu#599](https://github.com/Maximus5/ConEmu/issues/599), searching for bottle neck
+* [conemu#593](https://github.com/Maximus5/ConEmu/issues/593): Background color index was cropped to 8-color palette after `\e[9999;1H`.
+* [conemu#587](https://github.com/Maximus5/ConEmu/issues/587): Fix text selection when cursor passes the selection anchor (downright).
 * Update chinese translation.
 * Improve double-click (word) selection.
   For example, select `daily` by double-click inside brackets of `ConEmu [daily]>`.
 * ANSI: Sequence `ESC [ 1 4 t` reports terminal window size in pixels as `ESC [ 4 ; height ; width t`.
-* gh-605: Fix regressions on ‘App distinct’ settings page.
+* [conemu#605](https://github.com/Maximus5/ConEmu/issues/605): Fix regressions on ‘App distinct’ settings page.
 * Log extended information during console shutdown.
-  Ref: gh-604: Last conemu versions often can't attach to started console
+  Ref: [conemu#604](https://github.com/Maximus5/ConEmu/issues/604): Last conemu versions often can't attach to started console
 
