--- a/_posts/2016-03-28-Build-160328.md
+++ b/_posts/2016-03-28-Build-160328.md
@@ -5,12 +5,12 @@ build: 160328
 * New default hotkeys for process termination:
   * `Win+Alt+Break` - Terminate all but shell processes in the current console;
   * `Ctrl+Alt+Break` - Terminate active process in the current console.
-* gh-605: Fix regressions on ‘App distinct’ settings page (EOL).
-* gh-294: Add ‘Filter’ field to ‘Keys and Macro’ settings page.
-* gh-318: With ES_NUMBER user can't enter negative value (X/Y).
-* gh-318: Get rid of gap in Quake mode when frame width is less than 3 pix.
-* gh-165: Allow to drag Quake consoles between monitors.
+* [conemu#605](https://github.com/Maximus5/ConEmu/issues/605): Fix regressions on ‘App distinct’ settings page (EOL).
+* [conemu#294](https://github.com/Maximus5/ConEmu/issues/294): Add ‘Filter’ field to ‘Keys and Macro’ settings page.
+* [conemu#318](https://github.com/Maximus5/ConEmu/issues/318): With ES_NUMBER user can't enter negative value (X/Y).
+* [conemu#318](https://github.com/Maximus5/ConEmu/issues/318): Get rid of gap in Quake mode when frame width is less than 3 pix.
+* [conemu#165](https://github.com/Maximus5/ConEmu/issues/165): Allow to drag Quake consoles between monitors.
 * Show `Ctrl+Break` but `Pause` in the hotkeys list.
 * l10n. Update resources
-* gh-304: Use full monitor working area for maximized/fullscreen Quake mode.
+* [conemu#304](https://github.com/Maximus5/ConEmu/issues/304): Use full monitor working area for maximized/fullscreen Quake mode.
 
