--- a/_posts/2016-04-03-Build-160403a.md
+++ b/_posts/2016-04-03-Build-160403a.md
@@ -2,6 +2,6 @@
 build: 160403a
 ---
 
-* gh-620: ConEmu shows assertion when terminating SSH session in stermc.
-* gh-624: Defaults on Settings\Integration were lost after reactivating page.
+* [conemu#620](https://github.com/Maximus5/ConEmu/issues/620): ConEmu shows assertion when terminating SSH session in stermc.
+* [conemu#624](https://github.com/Maximus5/ConEmu/issues/624): Defaults on Settings\Integration were lost after reactivating page.
 
