--- a/_posts/2016-04-11-Build-160411.md
+++ b/_posts/2016-04-11-Build-160411.md
@@ -2,7 +2,7 @@
 build: 160411
 ---
 
-* gh-629: Support xterm keyboard emulation for ‘Bash on Ubuntu on Windows’.
+* [conemu#629](https://github.com/Maximus5/ConEmu/issues/629): Support xterm keyboard emulation for ‘Bash on Ubuntu on Windows’.
   conhost does not do keypressed translation, if they were posted directly to console input.
   That's why switch `-cur_console:p1` must be used to turn on internal xterm emulation in ConEmu.
   So, the task {Bash-on-Ubuntu} would be:
@@ -12,11 +12,11 @@ build: 160411
 ~~~
 
 * New default task {Bash::Bash on Ubuntu} for Windows 10 (if the feature is turned on in Windows).
-* gh-637, gh-626: Access vialation on entering plugin ‘ConEmu Background’.
+* [conemu#637](https://github.com/Maximus5/ConEmu/issues/637), [conemu#626](https://github.com/Maximus5/ConEmu/issues/626): Access vialation on entering plugin ‘ConEmu Background’.
 * Environment variables: `ConEmuArgs` and `ConEmuArgs2`.
   * `ConEmuArgs` now contains only ConEmu.exe's ‘switches’ (before `-cmd` or `-cmdlist`).
   * New variable `ConEmuArgs2` contains the command only: `-cmd ...` or `-cmdlist ...`.
 * Reuse `ConEmuArgs` when starting new ConEmu instance from cmd autorun.
-* gh-614, gh-616: Handle commas as decimal separators in the in-console progress detection.
+* [conemu#614](https://github.com/Maximus5/ConEmu/issues/614), [conemu#616](https://github.com/Maximus5/ConEmu/issues/616): Handle commas as decimal separators in the in-console progress detection.
   This fixes `curl -# -O` looping between 0 and 9%.
 * Do not apply the icon from {Task} if option ‘Show overlay icon’ is on, to avoid two similar icons, one over another.
