--- a/_posts/2016-04-13-Build-160413.md
+++ b/_posts/2016-04-13-Build-160413.md
@@ -10,7 +10,7 @@ build: 160413
     E.g. `XC` means `X`term keyboard mode and `C`ygwin active console application.
   * ‘RealConsole modes’ shows current values of GetConsoleMode for ConIn and ConOut.
 * GuiMacro: `TermMode(<Mode>[,<Action>])`.
-  Ref gh-629: To ‘fix’ arrow keys in vim in bash on Ubuntu on Windows
+  Ref [conemu#629](https://github.com/Maximus5/ConEmu/issues/629): To ‘fix’ arrow keys in vim in bash on Ubuntu on Windows
   one may set hotkey for macro `TermMode(2)` and switch keyboard mode
   manually when vim (linux process) is started and exited.
 
