--- a/_posts/2016-05-03-Build-160503.md
+++ b/_posts/2016-05-03-Build-160503.md
@@ -2,7 +2,7 @@
 build: 160503
 ---
 
-* gh-661: If ConEmu started with `-detached` switch, option ‘Close with last tab’ couldn't be changed.
+* [conemu#661](https://github.com/Maximus5/ConEmu/issues/661): If ConEmu started with `-detached` switch, option ‘Close with last tab’ couldn't be changed.
 * Improve debug shell logging (source of `@file` without paths).
   Settings/Info/Debug has ‘Shell’ option which shows processes creation information.
   E.g. if you run project make, and make executes `lnk @arguments`, the `arguments`
