--- a/_posts/2016-05-04-Build-160504.md
+++ b/_posts/2016-05-04-Build-160504.md
@@ -2,7 +2,7 @@
 build: 160504
 ---
 
-* gh-660: Fix crash on ConEmu.exe exit (32-bit).
+* [conemu#660](https://github.com/Maximus5/ConEmu/issues/660): Fix crash on ConEmu.exe exit (32-bit).
 * Separate process creation from module/inject activities.
   On Settings/Info/Debug page new ‘Exec’ option shows only
   ShellExecute and CreateProcess activities.
