--- a/_posts/2016-05-15-Build-160515.md
+++ b/_posts/2016-05-15-Build-160515.md
@@ -7,7 +7,7 @@ build: 160515
 * Settings page ‘Quake style’ for pull-down related options.
 * Settings for ChildGui moved to separate page (Integration / Children GUI).
 * cmderdev/cmder#929: Fullscreen was not activated properly in some cases (part of ConEmu was obscured by TaskBar).
-* gh-673: GuiMacro SetWindowPosSize: fix changing size w/o changing pos (by @jcsullins).
+* [conemu#673](https://github.com/Maximus5/ConEmu/issues/673): GuiMacro SetWindowPosSize: fix changing size w/o changing pos (by @jcsullins).
 * Was not able to use xml file from drive root.
   Now it's possible to run, for example: "ConEmu -loadcfgfile Z:\ConEmu.exe".
 * Show version stage in the Settings and About dialog titles.
