--- a/_posts/2016-05-22-Build-160522.md
+++ b/_posts/2016-05-22-Build-160522.md
@@ -2,17 +2,17 @@
 build: 160522
 ---
 
-* gh-682: Multi-line paste Enter confirmation setting was not being saved.
-* gh-681: Allow NodeJSPortable.exe to run node in the same ConEmu tab.
-* gh-654: Feature ‘Drag ConEmu window by client area’ may be disabled on ‘Mouse’ Settings page.
-* gh-370: Option ‘Auto save/restore opened tabs’ saved wrong split config in some cases.
+* [conemu#682](https://github.com/Maximus5/ConEmu/issues/682): Multi-line paste Enter confirmation setting was not being saved.
+* [conemu#681](https://github.com/Maximus5/ConEmu/issues/681): Allow NodeJSPortable.exe to run node in the same ConEmu tab.
+* [conemu#654](https://github.com/Maximus5/ConEmu/issues/654): Feature ‘Drag ConEmu window by client area’ may be disabled on ‘Mouse’ Settings page.
+* [conemu#370](https://github.com/Maximus5/ConEmu/issues/370): Option ‘Auto save/restore opened tabs’ saved wrong split config in some cases.
 * Maximus5/conemu-inside#23: Don't show Min/Max/Close buttons in the ‘Inside’ mode
 * StatusBar was painted using wrong ‘fade’ status in some cases (ConEmuInside).
 * ConEmu ‘Here’ and ‘Inside’ improvements (Integration Settings page).
   Now the command will be registered and displayed properly if ConEmu was
   started with special switches like `-LoadCfgFile`, `-LngFile` and others.
 * Recommended: `-reuse` over `-single`. `-reuse` does not enforce ‘single’ mode in the started instance.
-* gh-573: Support ANSI sequence to set cursor style (DECSCUSR, VT520).
+* [conemu#573](https://github.com/Maximus5/ConEmu/issues/573): Support ANSI sequence to set cursor style (DECSCUSR, VT520).
 
 ~~~
 CSI Ps SP q - Set cursor style (DECSCUSR, VT520).
