--- a/_posts/2016-07-24-Build-160724.md
+++ b/_posts/2016-07-24-Build-160724.md
@@ -3,5 +3,5 @@ build: 160724
 stage: stable
 ---
 
-* gh-780: Fix crash on drawing certain text data.
+* [conemu#780](https://github.com/Maximus5/ConEmu/issues/780): Fix crash on drawing certain text data.
 
