--- a/_posts/2016-09-04-Build-160904.md
+++ b/_posts/2016-09-04-Build-160904.md
@@ -3,7 +3,7 @@ build: 160904
 ---
 
 * GuiMacro: Detach(1) didn't disable confirmation.
-* gh-841: Support COMMON_LVB_REVERSE_VIDEO console attribute.
+* [conemu#841](https://github.com/Maximus5/ConEmu/issues/841): Support COMMON_LVB_REVERSE_VIDEO console attribute.
 * gitextensions/gitextensions#3263: Inside mode: Don't run console ‘As Admin’ if Shift is pressed.
 
   Remove ambiguous option to run started elevated console (Run As Admin).
