--- a/_posts/2016-10-09-Build-161009.md
+++ b/_posts/2016-10-09-Build-161009.md
@@ -5,16 +5,16 @@ stage: stable
 
 ### 161009a
 
-* gh-896: Fix regression: cygwin/msys process creation was broken.
+* [conemu#896](https://github.com/Maximus5/ConEmu/issues/896): Fix regression: cygwin/msys process creation was broken.
 
 ### 161009
 
 * GuiMacro: Allow {Task} arguments in `Shell` function.
 * Reuse previous palette on Unfasten/Re-Attach.
-* gh-888: Allow to use ConEmu as default console in third-party applications.
+* [conemu#888](https://github.com/Maximus5/ConEmu/issues/888): Allow to use ConEmu as default console in third-party applications.
 * DefTerm. Reinit some functions in SetAllHook
-* gh-830: Fix: Significant dwm.exe CPU time when renamed ConEmu tab is active.
-* gh-886: Settings / Integration: When ‘Shift’ is pressed during ‘Register’ button click,
+* [conemu#830](https://github.com/Maximus5/ConEmu/issues/830): Fix: Significant dwm.exe CPU time when renamed ConEmu tab is active.
+* [conemu#886](https://github.com/Maximus5/ConEmu/issues/886): Settings / Integration: When ‘Shift’ is pressed during ‘Register’ button click,
   ConEmu's ‘Here’ and ‘Inside’ items are registered as ‘extended’ menu items,
   and they are shown by Explorer only when ‘Shift’ is pressed.
 * Show process startup time in SysInfo and LogFiles.
