--- a/_posts/2017-01-18-Build-170118.md
+++ b/_posts/2017-01-18-Build-170118.md
@@ -4,18 +4,18 @@ stage: preview
 ---
 
 * Pasted paths to WSL bash were not converted to Unix style (/mnt/...).
-* connector#10: Unicode \u23CE ⏎ character preceding every prompt in ConEmu.
-  Ref: gh-586, Maximus5/connector#10, fish-shell/fish-shell#789
+* [connector#10](https://github.com/Maximus5/cygwin-connector/issues/10): Unicode \u23CE ⏎ character preceding every prompt in ConEmu.
+  Ref: [conemu#586](https://github.com/Maximus5/ConEmu/issues/586), Maximus5/connector#10, fish-shell/fish-shell#789
   Check: Maximus5/connector#19
 * ConEmu's `echo` and `type` commands were cropped sometimes.
   If RealConsole (conhost window) was created larger than expected by ConEmu GUI,
   than `echo` and `type` printed text using this larger size and after shrinking
   conhost window (up to Windows 8.1) part of data was cropped.
-* gh-451: Support multi-line (wrapped) hyperlinks (URLs) for Ctrl+Click.
-* gh-986: Don't change prompt text cursor position by LClick *above* the prompt.
-* gh-1007: Add more logging to mouse wheel processing.
+* [conemu#451](https://github.com/Maximus5/ConEmu/issues/451): Support multi-line (wrapped) hyperlinks (URLs) for Ctrl+Click.
+* [conemu#986](https://github.com/Maximus5/ConEmu/issues/986): Don't change prompt text cursor position by LClick *above* the prompt.
+* [conemu#1007](https://github.com/Maximus5/ConEmu/issues/1007): Add more logging to mouse wheel processing.
 * Moving some prompt features to GUI (Click & CtrlBS).
-  Ref: gh-986, gh-317, gh-845
+  Ref: [conemu#986](https://github.com/Maximus5/ConEmu/issues/986), [conemu#317](https://github.com/Maximus5/ConEmu/issues/317), [conemu#845](https://github.com/Maximus5/ConEmu/issues/845)
   Now ‘Change prompt text cursor position with Left Click’
   and ‘Ctrl+Backspace - delete word leftward to the text cursor’
   are process by ConEmu GUI without posting command to ConEmuHk.
@@ -27,6 +27,6 @@ stage: preview
   For example, while using bash and connector you may add to the end
   of your `PS1` the following sequence: `\[\033]9;12\007\]`.
 * Improve hyperlink detector on 'git diff' outputs.
-* gh-1007: Disable ENABLE_QUICK_EDIT_MODE by default.
+* [conemu#1007](https://github.com/Maximus5/ConEmu/issues/1007): Disable ENABLE_QUICK_EDIT_MODE by default.
 * Add logging of console mode changes.
 * Improve hyperlink detector on #include-s with absolute paths.
