--- a/_posts/2017-03-05-Build-170305.md
+++ b/_posts/2017-03-05-Build-170305.md
@@ -4,8 +4,8 @@ stage: preivew
 ---
 
 * Microsoft/BashOnWindows#1668: Fix wrong ANSI processing from Vim started in tmux.
-* gh-1055: Fix ‘Delete word lefward to the cursor’ at the bottom of the screen.
-* gh-787: Keyboard shortcut to scroll by prompts.
+* [conemu#1055](https://github.com/Maximus5/ConEmu/issues/1055): Fix ‘Delete word lefward to the cursor’ at the bottom of the screen.
+* [conemu#787](https://github.com/Maximus5/ConEmu/issues/787): Keyboard shortcut to scroll by prompts.
   Ctrl+Alt+PgUp/PgDn will jump between commands entered in the shell prompt.
   Take into account that prompt must pass to ConEmu the code
   `ESC]9;12ESC\` (ConEmu default) or `ESC[?7711h` (mintty implementation).
