--- a/_posts/2017-04-02-Build-170402.md
+++ b/_posts/2017-04-02-Build-170402.md
@@ -3,5 +3,5 @@ build: 170402
 stage: preview
 ---
 
-* gh-1085, gh-1087: Git 1.9.5 had failed to rebase (regression: 597d81f; ref: gh-688, gh-1063).
+* [conemu#1085](https://github.com/Maximus5/ConEmu/issues/1085), [conemu#1087](https://github.com/Maximus5/ConEmu/issues/1087): Git 1.9.5 had failed to rebase (regression: 597d81f; ref: [conemu#688](https://github.com/Maximus5/ConEmu/issues/688), [conemu#1063](https://github.com/Maximus5/ConEmu/issues/1063)).
 
