--- a/_posts/2017-06-05-Build-170605.md
+++ b/_posts/2017-06-05-Build-170605.md
@@ -3,5 +3,5 @@ build: 170605
 stage: alpha
 ---
 
-* gh-1149: Fix crash in wide consoles, when the cursor goes over 200 col (f8907a1 regression).
+* [conemu#1149](https://github.com/Maximus5/ConEmu/issues/1149): Fix crash in wide consoles, when the cursor goes over 200 col (f8907a1 regression).
 
