--- a/_posts/2017-06-22-Build-170622.md
+++ b/_posts/2017-06-22-Build-170622.md
@@ -3,7 +3,7 @@ build: 170622
 stage: alpha
 ---
 
-* gh-136: Swap nearest panes with `Apps+Alt+X`, swap in direction with `Apps+Alt+Arrow`.
+* [conemu#136](https://github.com/Maximus5/ConEmu/issues/136): Swap nearest panes with `Apps+Alt+X`, swap in direction with `Apps+Alt+Arrow`.
 * Let `Apps+Shift+G` group input for all consoles (instead of only visible panes like `Apps+G` does).
 * Use by default `LCtrl+Numbers` to switch consoles (instead of `Win+Numbers`).
 * Use by default `Win+Shift+Q` for ‘Switch next console’ by default. Leave hotkey `Win+Q` to Windows.
