--- a/_posts/2017-07-05-Build-170705.md
+++ b/_posts/2017-07-05-Build-170705.md
@@ -10,7 +10,7 @@ stage: alpha
   non-cygwin application like cmd.exe from cygwin shell, they may use ConEmuC.exe
   as loader. For example, run "ConEmuC.exe -c cmd.exe" instead of "cmd.exe".
 * Use connector in new default cygwin/msys/git-for-windows tasks.
-* gh-1008: Add hotkey `Apps+Alt+G` to group input for selected panes.
+* [conemu#1008](https://github.com/Maximus5/ConEmu/issues/1008): Add hotkey `Apps+Alt+G` to group input for selected panes.
   So one may add or remove console to input group by activating it
   and pressing the `Apps+Alt+G` (configurable). Consoles may belong
   to different splits/tabs.
