--- a/_posts/2017-07-09-Build-170709.md
+++ b/_posts/2017-07-09-Build-170709.md
@@ -3,8 +3,8 @@ build: 170709
 stage: alpha
 ---
 
-* gh-1175: Take into account modifier keys (Ctrl,Alt,Shift) pressed in the hotkey settings field.
+* [conemu#1175](https://github.com/Maximus5/ConEmu/issues/1175): Take into account modifier keys (Ctrl,Alt,Shift) pressed in the hotkey settings field.
 * New environment variable `ConEmuBaseDirShort` contains short path like `C:\PROGRA~1\ConEmu\ConEmu`.
-* gh-1082: New environment variable `ConEmuCfgDir` contains directory where xml file was loaded from.
-* gh-1178: Use short path to connector for launching from git-cmd. Recreate defult tasks to obtain changes
+* [conemu#1082](https://github.com/Maximus5/ConEmu/issues/1082): New environment variable `ConEmuCfgDir` contains directory where xml file was loaded from.
+* [conemu#1178](https://github.com/Maximus5/ConEmu/issues/1178): Use short path to connector for launching from git-cmd. Recreate defult tasks to obtain changes
   or edit task command manually (change `%ConEmuBaseDir%` to `%ConEmuBaseDirShort%`).
