--- a/_posts/2017-07-23-Build-170723.md
+++ b/_posts/2017-07-23-Build-170723.md
@@ -3,6 +3,6 @@ build: 170723
 stage: alpha
 ---
 
-* gh-1198, gh-1136, gh-1009: XTerm keyboard emulation for `Ctrl+key`.
-* gh-1200: ‘Sync dir’ feature was broken for bash.
+* [conemu#1198](https://github.com/Maximus5/ConEmu/issues/1198), [conemu#1136](https://github.com/Maximus5/ConEmu/issues/1136), [conemu#1009](https://github.com/Maximus5/ConEmu/issues/1009): XTerm keyboard emulation for `Ctrl+key`.
+* [conemu#1200](https://github.com/Maximus5/ConEmu/issues/1200): ‘Sync dir’ feature was broken for bash.
 
