--- a/_posts/2015-09-08-Build-150908.md
+++ b/_posts/2015-09-08-Build-150908.md
@@ -3,13 +3,13 @@ build: 150908
 ---
 
 * ConEmuHk. Some internal changes (store function index, fix init/deinit steps).
-* gh#279: ConEmu window grew in size after relaunch if size was defined in pixels or percents.
-* gh#279: Unchecked ‘Align ConEmu window size to cells’ was ignored on startup.
+* [conemu#279](https://github.com/Maximus5/ConEmu/issues/279): ConEmu window grew in size after relaunch if size was defined in pixels or percents.
+* [conemu#279](https://github.com/Maximus5/ConEmu/issues/279): Unchecked ‘Align ConEmu window size to cells’ was ignored on startup.
 * Fix unexpected resize to integral size on startup.
 * Don't create two default tasks {Bash::Git bash} for `git-cmd.exe` and `bin/sh.exe`.
 * Win2k: Remove static link to GetConsoleSelectionInfo.
 * Win2k: Adapt ‘Pause’ feature to lack of GetConsoleSelectionInfo.
-* gh#216: Mouse wheel only works on first console in split window.
+* [conemu#216](https://github.com/Maximus5/ConEmu/issues/216): Mouse wheel only works on first console in split window.
 * Don't count `git-cmd.exe` and `git-bash.exe` while checking for ‘Incomplete operations’ during tab/window close.
 * Correct close tab/window confirmation message (‘incomplete operations’ was not shown).
 * DefTerm. The switch `-new_console:z` was ignored by host application in some cases.
