--- a/_posts/2015-12-14-Build-150813f.md
+++ b/_posts/2015-12-14-Build-150813f.md
@@ -3,5 +3,5 @@ build: 150813f
 stage: preview
 ---
 
-* gh#467: Startup crash if startup task was renamed.
+* [conemu#467](https://github.com/Maximus5/ConEmu/issues/467): Startup crash if startup task was renamed.
 * Arbitrary shells (not a Task) were not accepted in FastConfiguration dialog.
