--- a/_posts/2016-01-24-Build-160124.md
+++ b/_posts/2016-01-24-Build-160124.md
@@ -2,16 +2,16 @@
 build: 160124
 ---
 
-* gh#509: Fix crash when checking ‘Explicit executable’.
+* [conemu#509](https://github.com/Maximus5/ConEmu/issues/509): Fix crash when checking ‘Explicit executable’.
 * Use bare {Far} task name for first `Far.exe` found in our folder.
   To simplify portable and testing installations, if Far Manager
   is copied into our program folder, don't change its task name
   (don't add version/bitness suffixes).
-* gh#507: Get rid of MsgBox on attach errors, print info to Console instead.
-* gh#514: Fix broken pseudographics representation if ‘Alternative font’ was off.
+* [conemu#507](https://github.com/Maximus5/ConEmu/issues/507): Get rid of MsgBox on attach errors, print info to Console instead.
+* [conemu#514](https://github.com/Maximus5/ConEmu/issues/514): Fix broken pseudographics representation if ‘Alternative font’ was off.
 * Prefer `bash.exe` over `sh.exe` when creating default tasks.
 * gd#516: Support ‘Application Cursor Keys (DECCKM)’.
 * Update `terminals` module to v0.7.4
 * Let characters 0x1F300..0x1F5FF be double-width.
-* gh#517: Radio-buttons Maximized and Fullscreen were not working (Apply is required though).
+* [conemu#517](https://github.com/Maximus5/ConEmu/issues/517): Radio-buttons Maximized and Fullscreen were not working (Apply is required though).
 
