--- a/_posts/2016-02-02-Build-160202.md
+++ b/_posts/2016-02-02-Build-160202.md
@@ -6,7 +6,7 @@ build: 160202
 * Show confirmation if Shift is pressed when selecting menu items:
   * Kill active process
   * Kill all bat shell
-* gh-241: Close consoles refactoring (close Far tabs with single click).
+* [conemu#241](https://github.com/Maximus5/ConEmu/issues/241): Close consoles refactoring (close Far tabs with single click).
   If Far Manager was started from other shell (from `cmd.exe`, for example)
   than using ‘Safe Far Close’ macro leads to return to the shell prompt,
   instead of termination of this console.
@@ -23,15 +23,15 @@ build: 160202
   was started from the leftmost console cell,
   than glyph `中` was cropped to one cell.
 * GitShowBranch.cmd: Support git branches with dots in branch name.
-* gh-515: Internal changes of OnShutdownConsole.
+* [conemu#515](https://github.com/Maximus5/ConEmu/issues/515): Internal changes of OnShutdownConsole.
 * Add default task {Tools::Docker}.
   Docker is detected by environment variable `%DOCKER_TOOLBOX_INSTALL_PATH%`.
   Also, `bash.exe` (Git, Cygwin or MSys) have to be installed to run `start.sh`.
 * Add default task for NYAGOS (if found in %PATH%).
-* gh-517: In Quake mode Maximized/Fullscreen was dropped after ConEmu restart.
-* conemu-inside/gh-1: Mouse text selection does not work in the Inside mode.
-* conemu-inside/gh-4: Avoid crashes when parent process is terminated during startup.
-* conemu-inside/gh-4: Correct warning messages and don't show them if parent was terminated during startup.
+* [conemu#517](https://github.com/Maximus5/ConEmu/issues/517): In Quake mode Maximized/Fullscreen was dropped after ConEmu restart.
+* [conemu-inside#1](https://github.com/Maximus5/conemu-inside/issues/1): Mouse text selection does not work in the Inside mode.
+* [conemu-inside#4](https://github.com/Maximus5/conemu-inside/issues/4): Avoid crashes when parent process is terminated during startup.
+* [conemu-inside#4](https://github.com/Maximus5/conemu-inside/issues/4): Correct warning messages and don't show them if parent was terminated during startup.
 * Allow to start new tab in current detached instance in one-console mode.
   If option ‘Multiple consoles in one ConEmu window’ is disabled,
   than new console is started in new ConEmu window, but this is impractical
