--- a/_posts/2016-02-03-Build-150813g.md
+++ b/_posts/2016-02-03-Build-150813g.md
@@ -6,7 +6,7 @@ stage: stable
 * Don't try to inject hooks into ConEmuC processes.
 * Allow AutoUpdates to ‘Stable’ builds.
 * Renew portable and xml notes.
-* gh-491: Example Far Macro `ConEmu.CtrlShiftT.lua` had wrong hotkey.
+* [conemu#491](https://github.com/Maximus5/ConEmu/issues/491): Example Far Macro `ConEmu.CtrlShiftT.lua` had wrong hotkey.
 * Prevent double execution of script specified in "AutoRun" cmd's registry key.
   For example, when "cmd /k CmdInit.cmd" was started (default for {cmd} task)
   triggering `ver` command caused execution of `test.cmd` again.
@@ -16,8 +16,8 @@ stage: stable
 "AutoRun"="test.cmd"
 ~~~
 
-* gh-470: Double click word selection was broken.
-* gh-517: In Quake mode Maximized/Fullscreen was dropped after ConEmu restart.
-* gh-297: Fix keyboard delay (Windows 7).
-* gh-486: Use https for github links.
-* gh-524: Deal with entangled window list returned by Far API.
+* [conemu#470](https://github.com/Maximus5/ConEmu/issues/470): Double click word selection was broken.
+* [conemu#517](https://github.com/Maximus5/ConEmu/issues/517): In Quake mode Maximized/Fullscreen was dropped after ConEmu restart.
+* [conemu#297](https://github.com/Maximus5/ConEmu/issues/297): Fix keyboard delay (Windows 7).
+* [conemu#486](https://github.com/Maximus5/ConEmu/issues/486): Use https for github links.
+* [conemu#524](https://github.com/Maximus5/ConEmu/issues/524): Deal with entangled window list returned by Far API.
