--- a/_posts/2016-02-07-Build-160207.md
+++ b/_posts/2016-02-07-Build-160207.md
@@ -4,11 +4,11 @@ stage: preview
 ---
 
 * Alt+HexNumbers: Dump collected codebase to console on ‘invalid’ input or GrayPlus.
-* gh-534: Fix wrong background drawing in Far (TrueColor).
-* gh-532: ‘Apply’ button failed to return ‘Normal’ mode in ‘Quake’ style.
-* gh-78: Rename <Always> to <No-Mod> (modifier for ‘Highlight and goto’ and some others).
+* [conemu#534](https://github.com/Maximus5/ConEmu/issues/534): Fix wrong background drawing in Far (TrueColor).
+* [conemu#532](https://github.com/Maximus5/ConEmu/issues/532): ‘Apply’ button failed to return ‘Normal’ mode in ‘Quake’ style.
+* [conemu#78](https://github.com/Maximus5/ConEmu/issues/78): Rename <Always> to <No-Mod> (modifier for ‘Highlight and goto’ and some others).
   Purpose of this option - process when no modifier (Ctrl, Alt, Shift, ...) is pressed.
-* gh-489: Fix TaskBar jump-list problems.
+* [conemu#489](https://github.com/Maximus5/ConEmu/issues/489): Fix TaskBar jump-list problems.
   * Default Tasks for `SDK::VS *` were not created by ConEmu64.exe.
   * Wrong icon was set for tasks `SDK::VS *` in jump-list.
 * Default extension (`xml` for example) was not appended if user fails to print it in the ‘Export settings’ dialog.
