--- a/_posts/2016-02-11-Build-160211.md
+++ b/_posts/2016-02-11-Build-160211.md
@@ -4,7 +4,7 @@ stage: preview
 ---
 
 * Initial steps for localization. [More information in docs](https://conemu.github.io/en/l10n.html).
-* gh-539, gh-535: Option ‘Default task for new console’ was ignored (d93b5d9 regression).
-* gh-540: In some cases ‘Enhance preudographics’ was skipped.
+* [conemu#539](https://github.com/Maximus5/ConEmu/issues/539), [conemu#535](https://github.com/Maximus5/ConEmu/issues/535): Option ‘Default task for new console’ was ignored (d93b5d9 regression).
+* [conemu#540](https://github.com/Maximus5/ConEmu/issues/540): In some cases ‘Enhance preudographics’ was skipped.
 * Avoid spare RealConsole resize on HideCaption changes.
 * Fix broken Far's Editor/Viewer close from TabMenu (7631ffd regression).
