--- a/_posts/2016-03-29-Build-160329.md
+++ b/_posts/2016-03-29-Build-160329.md
@@ -6,6 +6,6 @@ build: 160329
 * Hotkey `Ctrl+Alt+Break` was not processed properly.
 * LogFile was not created when ‘Internal LogFiles’ checkbox was on.
 * Simplify switching between Tasks on the ‘Tasks’ settings page (Up/Down keys if checkbox/button has focus).
-* gh-404, gh-322: Fix crash in the integrated applications after ConEmu update (DefTerm).
+* [conemu#404](https://github.com/Maximus5/ConEmu/issues/404), [conemu#322](https://github.com/Maximus5/ConEmu/issues/322): Fix crash in the integrated applications after ConEmu update (DefTerm).
   The effect will be noticed on the **next** update.
 
