--- a/_posts/2016-04-16-Build-160416.md
+++ b/_posts/2016-04-16-Build-160416.md
@@ -2,7 +2,7 @@
 build: 160416
 ---
 
-* gh-629: Once more ‘Bash on Ubuntu on Windows’.
+* [conemu#629](https://github.com/Maximus5/ConEmu/issues/629): Once more ‘Bash on Ubuntu on Windows’.
   It's recommended now to run bash with `-cur_console:p` switch.
   **Delete trailing `1`** if you have {bash} task already.
 
@@ -17,5 +17,5 @@ build: 160416
     but `-run...` switches are more convenient to avoid confusion with `cmd.exe`.
   * As before, both `/switch` and `-switch` notations are supported.
   * Also, ConEmu internals were changed to `-switch` notation.
-* gh-641: Correct posting `0x7F` (which is `<BS>` on xterm) to console.
+* [conemu#641](https://github.com/Maximus5/ConEmu/issues/641): Correct posting `0x7F` (which is `<BS>` on xterm) to console.
   It was posted with LEFT_CTRL_PRESSED in dwControlKeyState. We are posting `<BS>`, but not a `<Ctrl>-<BS>`.
