--- a/_posts/2016-04-28-Build-160428.md
+++ b/_posts/2016-04-28-Build-160428.md
@@ -2,8 +2,8 @@
 build: 160428
 ---
 
-* gh-472: One more fix for custom frame width (Quake) and ‘gaps’.
-* Revert gh-621 patch. Just post KeyUp(Alt) before pasting.
+* [conemu#472](https://github.com/Maximus5/ConEmu/issues/472): One more fix for custom frame width (Quake) and ‘gaps’.
+* Revert [conemu#621](https://github.com/Maximus5/ConEmu/issues/621) patch. Just post KeyUp(Alt) before pasting.
 * New feature ‘Adjust lightness of indistinguishable text’ on the ‘Colors’ settings page.
   The idea is to make text readable if certain foreground and background colors
   are indistinguishable for current palette. ConEmu will try to change the lightness
