--- a/_posts/2016-05-29-Build-160529.md
+++ b/_posts/2016-05-29-Build-160529.md
@@ -2,6 +2,6 @@
 build: 160529
 ---
 
-* gh-457: Support DefTerm feature for Idle (Pythonw.exe) and VisualStudio Code (code.exe).
+* [conemu#457](https://github.com/Maximus5/ConEmu/issues/457): Support DefTerm feature for Idle (Pythonw.exe) and VisualStudio Code (code.exe).
 * DefTerm: ConEmu crashed if it's closed during DefTerm initialization.
 * DefTerm: Don't warn user if requested process is already closed.
