--- a/_posts/2016-06-05-Build-160605.md
+++ b/_posts/2016-06-05-Build-160605.md
@@ -6,11 +6,11 @@ stage: preview
 * User was enable to enter list of executables on AppDistinct settings page (regression).
 * Option ‘New window’ in the create new console dialog started ConEmu with wrong arguments (no xml, etc.)
 * DefTerm. Option ‘Register on OS startup’ did not use specified xml file.
-* gh-698: Fix crash on copy selected text in HTML format if raster font is used.
-* Fix conditon for `<BS>` key posting (ref: gh-641).
-* gh-667: Alt+GrayPlus+HexNumbers changes.
+* [conemu#698](https://github.com/Maximus5/ConEmu/issues/698): Fix crash on copy selected text in HTML format if raster font is used.
+* Fix conditon for `<BS>` key posting (ref: [conemu#641](https://github.com/Maximus5/ConEmu/issues/641)).
+* [conemu#667](https://github.com/Maximus5/ConEmu/issues/667): Alt+GrayPlus+HexNumbers changes.
   * Alt+GrayPlus is bypassed to Far Manager by default. User still may
     set up explicit hotkey for ‘Start Alt+Number mode’ action.
   * Option ‘Alt+NumpadAdd - unicode hex codebase’ on the ‘Keyboard’ page
     (has no effect in Far Manager).
-* gh-629: Try to enable xterm keyboard emulation automatically (BashOnWindows).
+* [conemu#629](https://github.com/Maximus5/ConEmu/issues/629): Try to enable xterm keyboard emulation automatically (BashOnWindows).
