--- a/_posts/2016-06-12-Build-160612.md
+++ b/_posts/2016-06-12-Build-160612.md
@@ -4,13 +4,13 @@ stage: stable
 ---
 
 * Terminal modes were not displayed on Settings/Info page.
-* gh-716: Cygwin/msys connector output was broken after starting nano.
-* gh-722: Treat Unicode range U+2700..U+27BF as double width glyphs.
-* gh-718: Minimal cursor size option was ignored for invalid console cursor size (zero size).
-* gh-719: Write cursor information and console window rect to log file.
+* [conemu#716](https://github.com/Maximus5/ConEmu/issues/716): Cygwin/msys connector output was broken after starting nano.
+* [conemu#722](https://github.com/Maximus5/ConEmu/issues/722): Treat Unicode range U+2700..U+27BF as double width glyphs.
+* [conemu#718](https://github.com/Maximus5/ConEmu/issues/718): Minimal cursor size option was ignored for invalid console cursor size (zero size).
+* [conemu#719](https://github.com/Maximus5/ConEmu/issues/719): Write cursor information and console window rect to log file.
 * Print more console information in `ConEmuC -checkunicode`.
-* gh-723: Let ‘Minimize/Restore’ hotkey act in spite of ‘Always on top’ mode.
-* Don't process (append) environment variable twice (ref gh-724).
+* [conemu#723](https://github.com/Maximus5/ConEmu/issues/723): Let ‘Minimize/Restore’ hotkey act in spite of ‘Always on top’ mode.
+* Don't process (append) environment variable twice (ref [conemu#724](https://github.com/Maximus5/ConEmu/issues/724)).
   Example: `PATH=%ConEmuBaseDir%\Scripts;%PATH%;C:\Tools\Arc`
   So, do not add `%ConEmuBaseDir%\Scripts;` and `;C:\Tools\Arc`
   if they already exist in PATH. Only explicit comparison is done,
@@ -18,5 +18,5 @@ stage: stable
   it would be processed (appended).
 * Fix: Console progress `0%` was detected during tab startup (regression 69439a3).
 * Default task {Far}: don't double plugin folders to avoid doubled lines in F11 (Far 1.x and Far 2.x `/p` switch problem).
-* gh-700: Show tab icon for Far editors and viewers if ‘Far windows’ option is off.
+* [conemu#700](https://github.com/Maximus5/ConEmu/issues/700): Show tab icon for Far editors and viewers if ‘Far windows’ option is off.
 
