--- a/_posts/2016-06-19-Build-160619.md
+++ b/_posts/2016-06-19-Build-160619.md
@@ -3,11 +3,11 @@ build: 160619
 ---
 
 * Command ‘ConEmuC -ConInfo’ prints current console tech info.
-* Let intercept GetWindowLong(GWL_STYLE) for console window handle (ref gh-727, gh-719).
+* Let intercept GetWindowLong(GWL_STYLE) for console window handle (ref [conemu#727](https://github.com/Maximus5/ConEmu/issues/727), [conemu#719](https://github.com/Maximus5/ConEmu/issues/719)).
   Far 3.0 since build 4698 tries to query GWL_STYLE for console window?
 * l10n. New language resources.
-* gh-735: Add all marked tasks to Jump List, use TaskBar history limit value only for History items.
-* gh-740: Conversion to linux path on paste was not working for ‘Single line’ mode.
+* [conemu#735](https://github.com/Maximus5/ConEmu/issues/735): Add all marked tasks to Jump List, use TaskBar history limit value only for History items.
+* [conemu#740](https://github.com/Maximus5/ConEmu/issues/740): Conversion to linux path on paste was not working for ‘Single line’ mode.
 * Option ‘Autoupdate’ on Settings/TaskBar/Windows 7 Taskbar.
   If checked, Jump Lists will be updated automatically when user check
   the ‘Taskbar jump lists’ checkbox in Task properties.
