--- a/_posts/2016-07-10-Build-160710.md
+++ b/_posts/2016-07-10-Build-160710.md
@@ -3,9 +3,9 @@ build: 160710
 stage: stable
 ---
 
-* gh-766: ConEmuSetup improvements and error handling.
+* [conemu#766](https://github.com/Maximus5/ConEmu/issues/766): ConEmuSetup improvements and error handling.
   * Don't show MessageBox in auto mode (chocolatey, autoupdate);
   * Log error messages to log-file in the exe's folder;
   * In case TEMP directory is inaccessible, just use exe's folder.
-* gh-740: Try to convert paths to cygwin style if clipboard doesn't contain `\n` while pasting to cygwin/msys shells.
+* [conemu#740](https://github.com/Maximus5/ConEmu/issues/740): Try to convert paths to cygwin style if clipboard doesn't contain `\n` while pasting to cygwin/msys shells.
 * In some cases ‘Alternative font’ was not used for first cell in a row (1536b94 regression).
