--- a/_posts/2016-08-28-Build-160828.md
+++ b/_posts/2016-08-28-Build-160828.md
@@ -5,6 +5,6 @@ stage: stable
 
 * gi-821: Fixed crash on startup if Explorer is not started.
 * Support sha256 checksum in chocolatey package.
-* gh-832: Fix crash on erasing ‘Settings->Keys & Macro->Mark/Copy->Exceptions’.
-* gh-766: Prefer 'TEMP' env.var over GetTempPath function.
+* [conemu#832](https://github.com/Maximus5/ConEmu/issues/832): Fix crash on erasing ‘Settings->Keys & Macro->Mark/Copy->Exceptions’.
+* [conemu#766](https://github.com/Maximus5/ConEmu/issues/766): Prefer 'TEMP' env.var over GetTempPath function.
 * GuiMacro: Let Detach(1) do the work without confirmation.
