--- a/_posts/2016-09-14-Build-160914.md
+++ b/_posts/2016-09-14-Build-160914.md
@@ -3,6 +3,6 @@ build: 160914
 stage: stable
 ---
 
-* gh-863: Unchecking option ‘Kill ssh-agent with ConEmu’ had no effect.
+* [conemu#863](https://github.com/Maximus5/ConEmu/issues/863): Unchecking option ‘Kill ssh-agent with ConEmu’ had no effect.
 * Suggest `%UserProfile%\ConEmu\Logs` as default location for ANSI logs.
 
