--- a/_posts/2016-10-22-Build-161022.md
+++ b/_posts/2016-10-22-Build-161022.md
@@ -3,9 +3,9 @@ build: 161022
 stage: stable
 ---
 
-* gh-910: Fix regression: slower startup.
+* [conemu#910](https://github.com/Maximus5/ConEmu/issues/910): Fix regression: slower startup.
 * File `wsl-con.cmd` was created by msi in wrong folder.
 * Far Macro. Some improvements in ConEmu.CtrlNumber.lua
 * Console test (ConEmuC -checkunicode) improved.
-* gh-919: Fix misprint.
+* [conemu#919](https://github.com/Maximus5/ConEmu/issues/919): Fix misprint.
 * Some internal changes in hooking: support KernelBase for installing injects.
