--- a/_posts/2016-12-06-Build-161206.md
+++ b/_posts/2016-12-06-Build-161206.md
@@ -3,9 +3,9 @@ build: 161206
 stage: stable
 ---
 
-* gh-970: Pasting windows path in cygwin produces truncated result (77eb4e6 regression).
+* [conemu#970](https://github.com/Maximus5/ConEmu/issues/970): Pasting windows path in cygwin produces truncated result (77eb4e6 regression).
 * Allow to pass empty string via -cur_console:m:"" (set no mount prefix for Unix path conversion).
-* gh-552: Templates %m...m, %M...M - show mark ‘...’ for active (m) and inactive (M) tab.
+* [conemu#552](https://github.com/Maximus5/ConEmu/issues/552): Templates %m...m, %M...M - show mark ‘...’ for active (m) and inactive (M) tab.
   So, if you want to see ‘• ’ mark on the active tab (to emboss active tab)
   just change your console tab template to smth like: ‘%m• m<%c> %s’.
   https://conemu.github.io/en/SettingsTabBar.html#id2106
