--- a/_posts/2017-03-26-Build-170326.md
+++ b/_posts/2017-03-26-Build-170326.md
@@ -3,7 +3,7 @@ build: 170326
 stage: preview
 ---
 
-* Move window to active monitor by ‘Minimize/Restore’ hotkey if ‘Restore to active monitor’ is checked (ref gh-255).
+* Move window to active monitor by ‘Minimize/Restore’ hotkey if ‘Restore to active monitor’ is checked (ref [conemu#255](https://github.com/Maximus5/ConEmu/issues/255)).
 * Don't force ConEmu window to ‘active monitor’ unless `-monitor XXX` switch or ‘Restore to active monitor’ are specified.
 * Minor fix in startup pos/size adjustment (Win10, FixWindowRect).
 * Run as ‘System’ failed when session was opened via RDP.
