--- a/_posts/2017-08-05-Build-170805.md
+++ b/_posts/2017-08-05-Build-170805.md
@@ -3,9 +3,9 @@ build: 170805
 stage: preview
 ---
 
-* gh-1211: Pressing `Enter` in nano editor didn't insert new line.
+* [conemu#1211](https://github.com/Maximus5/ConEmu/issues/1211): Pressing `Enter` in nano editor didn't insert new line.
 * Fix missed icon for `{Bash::bash}` task.
-* gh-1209: Node and `undefined` in the `process.env.foobar`.
+* [conemu#1209](https://github.com/Maximus5/ConEmu/issues/1209): Node and `undefined` in the `process.env.foobar`.
 * Show proper terminal modes in Settings/Info dialog page.
 * Conversion from POSIX to native paths improved.
   * Proper prefix is used (autodetected or specified via `-new_console:p:/mnt` switch).
@@ -16,4 +16,4 @@ stage: preview
     sends Wheel events as Up/Down arrow key presses, and Shift+Wheel
     events as PgUp/PgDn key presses.
 * In come cases when using Connector ANSI sequences were not processed by ConEmu.
-* gh-999: Fix ‘RuntimeError: Failed to beep’ when running Python in ConEmu.
+* [conemu#999](https://github.com/Maximus5/ConEmu/issues/999): Fix ‘RuntimeError: Failed to beep’ when running Python in ConEmu.
